--- a/src/temperature/temperature.html
+++ b/src/temperature/temperature.html
@@ -54,7 +54,7 @@
 					<!-- Logo -->
 					<div class="navbar-brand">
 						<a class="logo" href="index.html">
-							<img src=".././img/logo.png" alt="logo">
+							<img id="tempLogo" src=".././img/logo.png" alt="logo">
 						</a>
 					</div>
 					<!-- /Logo -->
