Debate page failed

--- a/src/debate/debate.html
+++ b/src/debate/debate.html
@@ -80,8 +80,7 @@
     <div class="row">
       <div class="col-md-20">
         <h1 class="black-text">Defining Climate Change & the debate</h1>
-        <p class="white-text">Climate change is a global phenonena encapsulating changes in various weather patterns such as temperature, rainfall, sea level, and storm frequency.</p>
-				<p class="white-text">The debate surrounding the legitamacy of climate change does not challenge if climate change is occuring or not, but whether or not humans are the causal affect of such a phenonena. </p>
+        <p class="white-text">Failure to develop well formatted text and story telling. <-- PlaceHolder </p>
 
 		<!-- Footer -->
 		<footer id="footer" class="section">
