--- a/src/debate/debate.html
+++ b/src/debate/debate.html
@@ -39,7 +39,7 @@
 				<div class="navbar-header">
 					<!-- Logo -->
 					<div class="navbar-brand">
-						<a class="logo" href="index.html">
+						<a class="logo" href="../index.html">
 							<img src=".././img/logo.png" alt="logo">
 						</a>
 					</div>
