--- a/src/temperature/temperature.html
+++ b/src/temperature/temperature.html
@@ -53,7 +53,7 @@
 				<div class="navbar-header">
 					<!-- Logo -->
 					<div class="navbar-brand">
-						<a class="logo" href="index.html">
+						<a class="logo" href="../index.html">
 							<img id="tempLogo" src=".././img/logo.png" alt="logo">
 						</a>
 					</div>
