--- a/src/temperature/temperature.html
+++ b/src/temperature/temperature.html
@@ -108,8 +108,9 @@
         <div class="row">
             <div class="col-md-20">
                 <h2 class="headerBar">Vizualizing Anomalies</h2>
-                <p class="white-text">For example you can see a dramatic spike in temperature from the years 1960 to 1964. The temperature kept drastically increasing each year
-              with an increase of 9°C from 1963 to 1964.</p>
+                <p class="white-text">For example, In Russia you can see a dramatic spike in temperature from the years 1994 to 1995, however the following years 
+                    from 1995 to 1996 you see a dramatic decrease in temperature. And right after this decrease, the temperature continues to rise.
+                </p>
             </div>
         </div>
       </div>
@@ -369,8 +370,9 @@
         <div class="row">
             <div class="col-md-20">
                 <h2 class="headerBar">Is It Too Late?</h2>
-                <p class="white-text">If you compare the temperature of 1904 Afghanistan with 2014 Afghanistan, you will notice how far we have pushed our limits. With each month consistently
-                        exceeding an increase of 1°C to 2°C.</p>
+                <p class="white-text">If you compare the temperature of 1901 France with 2014 France, you will notice how far we have pushed our limits. 
+                    You can see that there has been an increase of 1.36°C over the past century. Although the warmer months haven't seen much increase,
+                 the cooler months have seen a signifcant rise in temperature.</p>
             </div>
         </div>
       </div>
