--- a/src/temperature/temperature.html
+++ b/src/temperature/temperature.html
@@ -116,6 +116,8 @@
       </div>
     </div>
 
+    <div class="chart-act" id="Tchart">
+
 <svg id="pSVG" width="1250" height="650" style ="position:relative">
     <foreignObject width="1250" height="650">
 
@@ -329,7 +331,7 @@
 </foreignObject>
 
 </svg>
-
+    </div>
 <div class="colorBar" id="barTwo">
     <div class="container">
         <div class="row">
