fixed spelling errors

--- a/src/energy/energy.html
+++ b/src/energy/energy.html
@@ -88,7 +88,7 @@
 	    		<div class="col-md-pull-4">
 	    			<div class="imageText">
 	    				<h2 class="header">Energy</h2>
-				        <p class="initialText">It is important to know how the use of energy can impact climate change. As we can see in this sunburst and choropleth map, more and more energy is being
+				        <p class="initialText">It is important to know how the use of energy can impact climate change. As we can see in this sunburst and choropleth map, more and more energy are being
     used every year. The type of energy used include coals, natural gas, and oil. However, there are energy and resources that are non-renewable. Meaning
     if we keep producing and consuming resources and energy, the world will eventually run dry. We need to know how to minimize our energy usage
     not only for the world, but for the climate as well. Fossil fuels for example generate a lot of CO2 that is a factor to global warming. This
@@ -183,16 +183,16 @@
 	    			<div class="imageText">
 	    				<h2 class="header">What does this Tell Us?</h2>
 				        <p class="initialText">
-							To look at an overview on energy consumption, we must first look at the map below. The red represents energy produced while the green is the energy cosumed.
+							To look at an overview on energy consumption, we must first look at the map below. The red represents energy produced while the green is the energy consumed.
 							You can clearly see which countries produce the most energy (Russia) and which consumed the most energy. As you scroll through the years, you can see
 							China getting greener, meaning that it consumes more and more energy. This shows that at each year, more and more energy is being consumed than produce. As we consume 
-							more energy, we are beginning to run out of energy and resources. To see how much acutally changed, we look at the comparison function of the map.
+							more energy, we are beginning to run out of energy and resources. To see how much actually changed, we look at the comparison function of the map.
 						</p>
 						<p class="initialText">
-							However, the map does not show the entirety of the the situation, so we must look at it in a different perspective using a Sunburst.
+							However, the map does not show the entirety of the situation, so we must look at it in a different perspective using a Sunburst.
 							The visual above compares each countries energy output and what they consumed and produced. And As you scroll through the years, the slice of the chart
 							containing Asia is slowly getting bigger and moving the right. This way you can see which countries/groups are consuming more and more energy and which
-							resource they are using. You can also look at more specifics by selecting a different subject in the drop down menu. You can look at Natural Gas to see
+							resource they are using. You can also look at more specifics by selecting a different subject in the drop-down menu. You can look at Natural Gas to see
 							who consumed the most and how it changed over time. Moreover, you can compare two years to see how much of a difference the two years are.
 						</p>
 			      	</div>
