spelling and grammar fixes.

--- a/src/co2/co2.html
+++ b/src/co2/co2.html
@@ -90,7 +90,7 @@
 	    		<div class="col-md-pull-4">
 	    			<div class="imageText">
 	    				<h2 class="header">The Main Greenhouse Gas</h2>
-				        <p class="initialText" id="col-md-4">Carbon Dioxide is the greenhouse gas that is the largest contributor to global warming. Humans have increased atmospheric Carbon Dioxide concentration by more than a third since the Industrial Revolution began. Since the Industrial Revolution, temperature levels have risen half a degree celcius, but solar activity has roughly stayed the same.</p>
+				        <p class="initialText" id="col-md-4">Carbon Dioxide is the greenhouse gas that is the largest contributor to global warming. Humans have increased atmospheric Carbon Dioxide concentration by more than a third since the Industrial Revolution began. Since the Industrial Revolution, temperature levels have risen half a degree Celsius, but solar activity has roughly stayed the same.</p>
 				        </br>
 				        <p class="initialText">This small half a degree increase in temperature has a drastic effect on our oceans. Oceans are vital ‘carbon sinks’, meaning that they absorb huge amounts of carbon dioxide, preventing it from reaching the upper atmosphere. Increased water temperatures and higher carbon dioxide concentrations than normal, which make oceans more acidic, are already having an impact on oceans.</p>
 			      	</div>
@@ -130,7 +130,7 @@
       	<div class="row">
       		<div class="col-md-20">
       			<h2 class="headerBar">How Long Do We Have?</h2>
-      			<p class="white-text">The Fifth Assessment Report of the International Panel on Climate Change (IPCC) quantifies the global maximum CO2 the world can still emit and also have a likely chance of keeping global average temperature rise below 2°C above pre-industrial temperatures. It reports that the goal is likely to be met if cumulative emissions (including the 535 GtC emitted by the end of 2013) do not exceeed 1 trillion tonnes of carbon (PgC).</p>
+      			<p class="white-text">The Fifth Assessment Report of the International Panel on Climate Change (IPCC) quantifies the global maximum CO2 the world can still emit and also have a likely chance of keeping global average temperature rise below 2°C above pre-industrial temperatures. It reports that the goal is likely to be met if cumulative emissions (including the 535 GtC emitted by the end of 2013) do not exceed 1 trillion tonnes of carbon (PgC).</p>
 			      </br>
 			      <p class="white-text">Unless our current linear trajectory changes, our CO2 levels are guaranteed to hit this 1 trillion ton threshold sometime between 2060 and 2070.</p>
       		</div>
