--- a/src/temperature/temperature.html
+++ b/src/temperature/temperature.html
@@ -90,7 +90,7 @@
             <div class="col-md-pull-4">
                 <div class="imageText">
                     <h2 class="header">The Effect of a Warming Planet</h2>
-                    <p class="initialText">Since the 1900's, the the temperature of each country has experienced around 1°C of warming. This may not appear to be a big
+                    <p class="initialText">Since the 1900's, the temperature of each country has experienced around 1°C of warming. This may not appear to be a big
                 deal since it's just 1°C, however this causes deadly problems. Hot countries will face longer and more frequent heat waves causing
                  droughts.</p>
                     </br>
@@ -109,7 +109,8 @@
             <div class="col-md-20">
                 <h2 class="headerBar">Vizualizing Anomalies</h2>
                 <p class="white-text">For example, In Russia you can see a dramatic spike in temperature from the years 1994 to 1995, however the following years 
-                    from 1995 to 1996 you see a dramatic decrease in temperature. And right after this decrease, the temperature continues to rise.
+                    from 1995 to 1996 you see a dramatic decrease in temperature. And right after this decrease, the temperature continues to rise. This is strange compared to 
+                    the small increment and decrements around this time.
                 </p>
             </div>
         </div>
@@ -355,10 +356,10 @@
                 6%. Although the production of soy and rice goes up 6% at 1.5°C and 2°C, if you get high temperatures or very dry conditions during the development of crops, it produces essentially
                 no grain. At certain temperature thresholds, corn doesn't die but it also doesn't grow any seeds which defeats the purpose of growing corn. The benefits of
                  fertilization with more carbon dioxide is offsetted by the fact that plant will still die from the temperature and dry conditions. A plant growing
-                 really fast when it died is still a dead plant. There is no benefits for crops with an increase in temperature.</p>
+                 really fast when it died is still a dead plant. There are no benefits for crops with an increase in temperature.</p>
                     </br>
                     <p class="initialText">Faced with this reality, we must understand where to go from this. We should try our best to limit this half degree growth, however we must be very
-                 careful since we have little experience with limiting glboal warming with precision. If we try to limit growth to 1.5°C, it may end up being 2°C or 2°C may
+                 careful since we have little experience with limiting global warming with precision. If we try to limit growth to 1.5°C, it may end up being 2°C or 2°C may
                  end up being 3°C. If we were to exceed this 1.5°C limit and then brought the temperature back down, there is no guarantee that the consequences of crossing
                  this limit would be reversed.</p>
                 </div>
@@ -374,7 +375,8 @@
                 <h2 class="headerBar">Is It Too Late?</h2>
                 <p class="white-text">If you compare the temperature of 1901 France with 2014 France, you will notice how far we have pushed our limits. 
                     You can see that there has been an increase of 1.36°C over the past century. Although the warmer months haven't seen much increase,
-                 the cooler months have seen a signifcant rise in temperature.</p>
+                 the cooler months have seen a significant rise in temperature. If France can't stop this temperature climb, it'll experience the consequences of 
+                 reaching 1.5°C.  </p>
             </div>
         </div>
       </div>
