--- a/src/debate/debate.html
+++ b/src/debate/debate.html
@@ -69,7 +69,62 @@
 			</div>
 		</header>
 		<!-- /Header -->
+        <div class="colorBar">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-20">
+                            <h2 class="headerBar">The Skepticism</h2>
+                            <p class="white-text">
+                                Out of 29,000 scientists, 97.1% of scientists agreed that climate change is caused by human activity. 2.2% of the remaining 
+                                scientists were unclear while 0.7% of the scientists disputed that climate change is caused by human activity. Compared to the 
+                                97% agreement by scientists, public opinions are not nearly as close to an agreement. 
+                                <br><br>
+                                In 2014, the Public Religion Research Institute conducted a survey of 3,022 random adults for their thoughts on climate change.
+                                Of the 3,022 adults, 23% were skeptical of climate change. More than half of the skeptics believed they don't notice any changes in weather and if 
+                                they did, it's due to a natural cycle where temperature goes up or down every couple of hundred years. 12% of skeptics don't believe 
+                                due to insufficient evidence. 
+                                <br><br>
+                                With these reasonings in mind, we hope to change their minds. 
+                            </p>
+                        </div>
+                    </div>
+                </div>
+              </div>
+              <div class="duoImage">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-pull-4">
+                                <div class="imageText">
+                                    <img src="../img/skepticism.jpg" height="500px">
+                                  </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>          
+                <div class="colorBar">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-md-20">
+                                    <h2 class="headerBar">Our Response</h2>
+                                    <p class="white-text">
+                                        Our visuals show that these skeptics are incorrect about their belief that climate change isn't related to human activity.
+                                        Our temperature visual and choropleth shows that the world is getting warmer. Not all countries experience the same effects of 
+                                        rise in temperature. Certain countries experience this rise more than others. 
+                                        <br> <br>
+                                        Our energy and carbon dioxide visuals show that the temperature isn't varying naturally. Humans are using more energy and producing 
+                                        more carbon dioxide causing the rise in temperature. 
+                                        <br> <br> 
+                                        Our datasets are sourced from credible sources with experience in gathering data from their fields. For example, 
+                                        our energy source, Enerdata, is experienced in energy markets and international energy coverages. 
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                      </div>
 
+
+
+        <!--        
 		<div class="Look-At-This-Shit">
 
 
@@ -80,7 +135,8 @@
     <div class="row">
       <div class="col-md-20">
         <h1 class="black-text">Defining Climate Change & the debate</h1>
-        <p class="white-text">Failure to develop well formatted text and story telling. <-- PlaceHolder </p>
+        <p class="white-text">Failure to develop well formatted text and story telling. <-- PlaceHolder </p> 
+      -->
 
 		<!-- Footer -->
 		<footer id="footer" class="section">
